--- a/docs/contribute/changelogs/0.5.0rc1.rst
+++ b/docs/contribute/changelogs/0.5.0rc1.rst
@@ -1,6 +1,189 @@
-Version 0.5.0b3 (2024-04-01)
-============================
+Version 0.5.0rc1 (2024-06-15)
+=============================
 
+* feat: update dependencies (Romain Dorgueil)
+* feat: add logo to docs (Romain Dorgueil)
+* feat: update readme (Romain Dorgueil)
+* feat: update readme (Romain Dorgueil)
+* feat: update readme (Romain Dorgueil)
+* feat: update readme images and doc index (Romain Dorgueil)
+* feat: update readme (Romain Dorgueil)
+* feat: update readme and schemas (Romain Dorgueil)
+* feat: image optimization (Romain Dorgueil)
+* feat: tuning dashboard (legends, rates, ...) (Romain Dorgueil)
+* feat: rename apdex to tpdex where references subsist, implement G tpdex on network error (Romain Dorgueil)
+* feat: remove 'UI' in meta (Arthur Degonde)
+* feat: pages meta via helmets (Arthur Degonde)
+* docs: janitor defaults (Romain Dorgueil)
+* feat: minimal docs for janitor app (Romain Dorgueil)
+* feat: make sure event loop is closed on fixture end (Romain Dorgueil)
+* test: remove pytest asyncio mark (Arthur Degonde)
+* Update index.rst (Romain Dorgueil)
+* test: new event loop for each proxy benchmark test (Arthur Degonde)
+* feat: tuning filter (Romain Dorgueil)
+* feat: fix facet orders, add links from dashboard to transaction list (Romain Dorgueil)
+* feat: fix summary sparkline snapshot (Romain Dorgueil)
+* feat: do not show NULL as a choice (Arthur Degonde)
+* feat: error rate should stick to the floor if everything is 0 (Romain Dorgueil)
+* feat: fix overview summary data (Romain Dorgueil)
+* test: update snapshots (Arthur Degonde)
+* fix: apdexscale classname (Arthur Degonde)
+* feat: change slider range style (Arthur Degonde)
+* feat: better legends for summary sparklines, refactoring for less duplicate code (Romain Dorgueil)
+* feat: freeze timezone in frontend unit tests so that the date shown in snapshots are always the same even if the running env differs (Romain Dorgueil)
+* feat: refactoring dashboard before working on ux details (Romain Dorgueil)
+* feat: readme urls should be absolute to work on pypi (Romain Dorgueil)
+* chore(deps): bump orjson from 3.10.4 to 3.10.5 (dependabot[bot])
+* test: tests for facets (Arthur Degonde)
+* feat: change slider range for tpdex style (Arthur Degonde)
+* feat: fixes titles and margins (#355) (Romain Dorgueil)
+* feat: display tags in transaction details (Romain Dorgueil)
+* feat: slider range for tpdex (Arthur Degonde)
+* release: 0.5.0b12 (Romain Dorgueil)
+* feat: remove references to removed "enabled" setting for root applications (Romain Dorgueil)
+* release: 0.5.0b11 (Romain Dorgueil)
+* feat: remove removed settings from helm chart (Romain Dorgueil)
+* feat: tuning migrations (Romain Dorgueil)
+* Delete harp_apps_sqlalchemy_storage directory (Romain Dorgueil)
+* feat: tuning docs (Romain Dorgueil)
+* feat: update how it work image (Romain Dorgueil)
+* feat: fix command names for db related features (Romain Dorgueil)
+* Update harp/_logging.py (Romain Dorgueil)
+* Update docs/contribute/testing/database.rst (Romain Dorgueil)
+* feat: marks on slider (Arthur Degonde)
+* chore: housekeeping (Romain Dorgueil)
+* feat: cleanup, better sql logging, tests (Romain Dorgueil)
+* feat: tpdex range slider update on pointer up (Arthur Degonde)
+* feat: rangeslider onpointerup prop (Arthur Degonde)
+* feat: filter based on tpdex facet (Arthur Degonde)
+* refactor: remove unused condition in filter query (Arthur Degonde)
+* test: tpdex facet filter (Arthur Degonde)
+* test: updated filters meta (Arthur Degonde)
+* refactor: reset all filters (Arthur Degonde)
+* feat: tpdex facet (Arthur Degonde)
+* feat: pass tpdex query params (Arthur Degonde)
+* fix: rangeslider default values (Arthur Degonde)
+* feat: tpdex in url (Arthur Degonde)
+* feat: tpdex in url (Arthur Degonde)
+* feat: simple range slider for perf index (Arthur Degonde)
+* chore: housekeeping and cleanup (Romain Dorgueil)
+* refactor: rename slider (Arthur Degonde)
+* feat: slider component (Arthur Degonde)
+* feat: fix create migration script syntax (Romain Dorgueil)
+* feat: document migrations (Romain Dorgueil)
+* fix: update meta for filters (Arthur Degonde)
+* test: update snapshots (Arthur Degonde)
+* feat: reset button and disable only choice on filters (Arthur Degonde)
+* test: increase timeout for tests (Arthur Degonde)
+* feat: first working implementation of sqlalchemy migrations using alembic (Romain Dorgueil)
+* test: non exhaustive facet (Arthur Degonde)
+* chore(deps): bump orjson from 3.10.3 to 3.10.4 (dependabot[bot])
+* docs: ref to telemetry docs in main index (Arthur Degonde)
+* feat: non exhaustive facet (Arthur Degonde)
+* feat: add admonition at documentation top (Romain Dorgueil)
+* docs: telemetry docs (Arthur Degonde)
+* chore(deps): bump dataclasses-json from 0.6.6 to 0.6.7 (dependabot[bot])
+* chore(deps): bump rich-click from 1.8.2 to 1.8.3 (dependabot[bot])
+* chore: image optimization (Romain Dorgueil)
+* docs: logging documentation (Romain Dorgueil)
+* fix: store states in url for transactions list (Arthur Degonde)
+* feat: store states in url for transactions list (Arthur Degonde)
+* fix: standard urls (Arthur Degonde)
+* fix: standard urls (Arthur Degonde)
+* feat: less log, more infos (Romain Dorgueil)
+* feat: custom asdict implementation (Romain Dorgueil)
+* docs: tuning http client config documentation (Romain Dorgueil)
+* test: disabled settings (Arthur Degonde)
+* feat: fix lazy callable so that pylance is happy (and remove unnecessary complexity) (Romain Dorgueil)
+* docs: update httpclient example (Arthur Degonde)
+* feat: apply new tools to dashboard settings (Romain Dorgueil)
+* feat: a bit of documentation around settings (Romain Dorgueil)
+* feat: more flexibility in cache config and simpler final code (yet, allows to pass arbitrary parameters and even override subcomponent types) (Romain Dorgueil)
+* chore(deps): bump sentry-sdk from 2.4.0 to 2.5.0 (dependabot[bot])
+* chore(deps): bump hishel from 0.0.26 to 0.0.27 (dependabot[bot])
+* docs: update httpclient settings docs (Arthur Degonde)
+* refactor: configurable httpclient (Arthur Degonde)
+* feat: add no cache flag when request bypassed the cache storage explicitely (Romain Dorgueil)
+* feat: check blob existence before insert (Romain Dorgueil)
+* release: 0.5.0b10 (Romain Dorgueil)
+* refactor: configurable httpclient (Arthur Degonde)
+* feat: configurable timeout and cache (Arthur Degonde)
+* doc: add http client index (Arthur Degonde)
+* feat: configurable timeout and cache (Arthur Degonde)
+* feat: display cache status in dashboard (Romain Dorgueil)
+* feat: default makefile task now starts a devserver (Romain Dorgueil)
+* feat: move visual tests into linux containers for better reproducibility (Romain Dorgueil)
+* feat: upgrade ruff (closes #316). (Romain Dorgueil)
+* feat: reset page when search changes (Arthur Degonde)
+* release: 0.5.0b9 (Romain Dorgueil)
+* chore: cleanup and update dependencies (Romain Dorgueil)
+* feat: instead of deduping list in config, make sure the duplicates are handled beforehand (Romain Dorgueil)
+* feat: add help link in top bar (Romain Dorgueil)
+* test: snapshots update (Arthur Degonde)
+* feat: standard urls for transactions list (Arthur Degonde)
+* test: fix add app test (Arthur Degonde)
+* test: standard urls for transactions list (Arthur Degonde)
+* feat: standard urls for transactions list (Arthur Degonde)
+* feat: standard urls for transactions list (Arthur Degonde)
+* fix: handle duplicated enabled apps (Arthur Degonde)
+* fix: reset command line option (Arthur Degonde)
+* feat: use timezone aware timestamps (UTC) for metrics (Arthur Degonde)
+* feat: use timezone aware timestamps (UTC) (Arthur Degonde)
+* fix: user not found using sqlite in memory (Arthur Degonde)
+* docs: update install doc (Arthur Degonde)
+* docs: images in their room (Romain Dorgueil)
+* docs: tuning (Romain Dorgueil)
+* feat: minor tweaks to documentation home (Romain Dorgueil)
+* feat: add pictures to user documentation, document tpdex (Romain Dorgueil)
+* docs: tuning documentation, fixing stuff, better cli reference ... (Romain Dorgueil)
+* release: 0.5.0b8 (Romain Dorgueil)
+* feat: fix documentation url (Romain Dorgueil)
+* feat: fix concurrency problem with sqlite in memory: looks like transactions return before sqlite really commited data to the underlying storage, and memory storage make it too fast (Romain Dorgueil)
+* docs: minor tweaks and cleanup (Romain Dorgueil)
+* docs: working on installation guide (Romain Dorgueil)
+* feat: add ability to install from PyPI in runc_wheel script (Romain Dorgueil)
+* docs: only clean distributed files on building python wheel (Romain Dorgueil)
+* release: 0.5.0b7 (Romain Dorgueil)
+* docs: chores and python release process (Romain Dorgueil)
+* feat: remove useless instruction in sandbox script (Romain Dorgueil)
+* feat: fix sandbox subprocess arguments (Romain Dorgueil)
+* feat: more expliciteness on startup errors, stop with system status != 0 on startup error (Romain Dorgueil)
+* feat: fix misnamed option for endpoints (Romain Dorgueil)
+* feat: add quick ability to pass entrypoints using cli (Romain Dorgueil)
+* feat: fix make clean to not depend on sphinx install for a simple directory removal (Romain Dorgueil)
+* feat: abiility to test a wheel in container, fix tests (not really, time dependant) (Romain Dorgueil)
+* wip (Romain Dorgueil)
+* feat: add env var to force environment type (dev, prod) (Romain Dorgueil)
+* chore(deps): bump orjson from 3.10.0 to 3.10.3 (dependabot[bot])
+* chore(deps-dev): bump sphinx from 7.2.6 to 7.3.7 (dependabot[bot])
+* chore(deps-dev): bump sphinx-autobuild from 2024.4.13 to 2024.4.16 (dependabot[bot])
+* chore(deps): bump aiohttp from 3.9.4 to 3.9.5 (dependabot[bot])
+* feat: dependencies, add faq entry for docker version problem with testcontainers (Romain Dorgueil)
+* feat: create empty dir breaking test suite when missing (Romain Dorgueil)
+* feat: run tests in docker using dind (Romain Dorgueil)
+* chore(deps): bump hishel from 0.0.25 to 0.0.26 (dependabot[bot])
+* feat: add ability to run ci-like test suite locally using dind, fix container ip (Romain Dorgueil)
+* chore(deps-dev): bump ruff from 0.3.5 to 0.3.7 (dependabot[bot])
+* feat: reinstall docker in development images (Romain Dorgueil)
+* feat: migrate from alpine to debian to counter musl related problems with various cpu architectures (Romain Dorgueil)
+* feat: fix cli, add max width to transaction (Romain Dorgueil)
+* chore(deps): bump aiohttp from 3.9.3 to 3.9.4 (dependabot[bot])
+* chore(deps): bump sentry-sdk from 1.44.0 to 1.45.0 (dependabot[bot])
+* feat: increase default timeout to 30 sec (Romain Dorgueil)
+* chore(deps-dev): bump testcontainers from 4.3.0 to 4.3.3 (dependabot[bot])
+* wip: uniformize cli (Romain Dorgueil)
+* chore(deps-dev): bump pytest-asyncio from 0.21.1 to 0.23.6 (dependabot[bot])
+* chore(deps-dev): bump ruff from 0.1.15 to 0.3.5 (dependabot[bot])
+* chore(deps-dev): bump pytest-cov from 4.1.0 to 5.0.0 (dependabot[bot])
+* feat: include frontend in packaging (Romain Dorgueil)
+* feat: dashboard paths (Romain Dorgueil)
+* feat: cleanup of frontend modules (makefile) (Romain Dorgueil)
+* chore: bump version (Romain Dorgueil)
+* feat: move rich click to main dependencies (Romain Dorgueil)
+* feat: add short description (Romain Dorgueil)
+* feat: remove unsupported rst directives for pypi (Romain Dorgueil)
+* feat: rename package to use available name on pypi (Romain Dorgueil)
+* release: 0.5.0b3 (Romain Dorgueil)
 * feat: fix rtd (Romain Dorgueil)
 * feat: fix rtd (Romain Dorgueil)
 * feat: fix rtd (Romain Dorgueil)
