--- a/docs/contribute/changelogs/0.6.0a2.rst
+++ b/docs/contribute/changelogs/0.6.0a2.rst
@@ -29,12 +29,15 @@ Changed
 * Storage: SQL blob storage now keeps a LRU cache of known blobs to avoid querying the database if the answer can be closer.
 * Storage: background worker queue for storage is now separated from the storage implementation.
 * Storage: test fixture ``storage`` has been renamed to ``sql_storage`` for expliciteness and less linter conflicts.
+* Storage: the default sqlite settings is set to in-memory instead of memory or file depending on where the default
+  comes from.
 
 Fixed
 :::::
 
 * Proxy: some errors happening when the server unexpectedly closes the connection although the client is waiting for
   data are now caught and logged like other network/system related errors.
+* DX: default logging level shows harp infos, access logs and server listening infos.
 
 Updated
 :::::::
