--- a/docs/changelogs/0.7.0a2.rst
+++ b/docs/changelogs/0.7.0a2.rst
@@ -1,4 +1,4 @@
-Version 0.7.0a1 (2024-09-06)
+Version 0.7.0a2 (2024-09-12)
 ============================
 
 Added
@@ -10,6 +10,8 @@ Added
   closer to httpx interfaces.
 * Core/Services: Services definitions are now using a declarative configuration format, that can be loaded by
   applications. A sphinx extension was added to automatically document service definitions from applications.
+* Core/Services: Ability to include another services.yml file, either by absolute path (using
+  "!include /path/to/other.yml") or from a python package path, using "!include services.yml from my.package" syntax.
 * Notifications: Implements a simple way to send notifications to a slack or a google chat webhook to catch errors.
 * Proxy: Added support for multiple remote urls for a given endpoint.
 * Proxy: Added support for default/fallback pools in remote configuration for resilience.
